cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_372.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/testutil/format_output.c:482: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/testutil/format_output.c:482:14: Write of unused value
480.                       *p++ = ' ';
481.               }
482.               *p++ = '\0';
                    ^
483.           }
484.   
